objects/Veda_Contributing_Factor__c.object
<CustomObject>
    <fields>
        <fullName>Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score</label>
        <referenceTo>Veda_Score__c</referenceTo>
        <relationshipName>ContributingFactors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contributing_Factor_Id__c</fullName>
        <label>contributing Factor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score_Impactor__c</fullName>
        <label>score Impactor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Contributing Factor</label>
    <nameField>
        <label>ContributingFactor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Contributing Factor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>